Main page overflow fix

--- a/src/Anticafe/main.css
+++ b/src/Anticafe/main.css
@@ -1,3 +1,9 @@
+#app
+{
+    height: 100% auto;
+    overflow-y: hidden;
+}
+
 
 .top-bar
 {
